--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -1,50 +1,77 @@
-.formulario{
+.background__{
+  position: absolute;
+  top: 0;
+  z-index: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  background:rgba(66, 63, 63, 0.788);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container__form{
+  background-color: white;
+  width: 700px;
+  height: auto;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 20px;
+  }
+  .formulario{
+    width: 80%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 40px;
   }
-  .container__formulario{
-    margin: 0 auto 10px;
-    max-width: 85vw;
-    border: 2px solid rgb(129, 127, 127);
+  .fieldsetCustom{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* min-width: 0%; */
   }
-  fieldset{
-    border: none;
+  .fieldsetCustom input{
+    height: 40px;
   }
+  .fieldsetCustom label{
+    font-size: 20px;
+  }
+  fieldset{border: none;
   
-  .input__text{
-    display: flex;
-  }
-  .input__radio{
-    border: none;
-  }
-  .input__text label{
-    font-size: 30px;
-    margin-right: 5px;
-  }
-  #descricao{
-    width: 600px;
-    height: 20px;
-  }
-  #valor{
-    width: 100px;
-    height: 20px;
-  }
-  #data{
-    height: 20px;
   }
   .btn{
-    background: rgba(2, 104, 90, 0.79);;
-	color: white;
-	border-style: outset;
-	height: 40px;
-	width: 100px;
-	font: bold15px arial,sans-serif;
-	text-shadow: none;
+    height: 50px;
+    width: 70px;
+  }
+  
+  .input__radio{
+    margin: 0 auto;
   }
   .input__radio label{
-    font-size: 30px;
+    font-size: 20px;
   }
+  .input__radio input{
+    margin-left: 10px;
+  }
+  .form__btn{
+    margin: 0 auto;
+    display: flex;
+    gap: 20px;
+  }
+  .style__h2{
+    margin: 0 auto;
+  }
+
   .error{
     color: red;
     
+  }
+  .flex {
+    margin-top: 0;
+    display: flex;
+    align-items: center;
   }
