--- a/client/src/templates/styles.css
+++ b/client/src/templates/styles.css
@@ -27,6 +27,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+.button__close{
+  position: relative;
+  right: -40%;
+  height: 50px;
+  width: 50px;
+  border: none;
+  background-color: white;
+  font-size: 30px;
+  font-weight: 700;
+  cursor: pointer;
 }
 h2{
   margin: 0;
@@ -71,4 +83,12 @@ th{
 .total{
   font-size: 25px;
   font-weight: 700;
+}
+.btn__new{
+  background-color: rgba(2, 104, 90, 0.79);
+  border-radius: 20px;
+  width: 150px;
+  height: 40px;
+  margin-left: 82%;
+  margin-bottom:20px ;
 }
