--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -49,7 +49,7 @@
   }
   
   .input__radio{
-    margin: 0 auto;
+    margin: 10px auto;
   }
   .input__radio label{
     font-size: 20px;
@@ -74,4 +74,13 @@
     margin-top: 0;
     display: flex;
     align-items: center;
+  }
+  .btns{
+    display: flex;
+    gap: 10px;
+    margin-top:10px ;
+  }
+  .btns button{
+    width: 100px;
+    height: 30px;
   }
